--- a/frontend/src/app/pages/aluno-modal/aluno-modal.html
+++ b/frontend/src/app/pages/aluno-modal/aluno-modal.html
@@ -6,71 +6,85 @@
 
 <ion-content  class="ion-padding">
   <form *ngIf="form" [formGroup]="form">
+    <mat-form-field class="campo">
+      <mat-label>CPF</mat-label>
+      <input matInput type="text" formControlName="cpf"   [imask]="{mask: '000.000.000-00'}">
+      <mat-icon (click)="buscarAlunoPorCPF()" matSuffix>search</mat-icon>
+    </mat-form-field>
 
-    <ion-item lines="full">
-      <ion-label position="stacked">Nome</ion-label>
-      <ion-input type="text" formControlName="nome" [disabled]="!editMode"></ion-input>
-    </ion-item>
+    <mat-form-field class="campo">
+      <mat-label>Nome</mat-label>
+      <input matInput type="text" formControlName="nome" >
+    </mat-form-field>
 
-    <ion-item lines="full">
-      <ion-label position="stacked">Email</ion-label>
-      <ion-input type="email" formControlName="email" [disabled]="!editMode"></ion-input>
-    </ion-item>
+    <mat-form-field class="campo">
+      <mat-label>Email</mat-label>
+      <input matInput type="email" formControlName="email" >
+    </mat-form-field>
 
-    <ion-item lines="full">
-      <ion-label position="stacked">Fone</ion-label>
-      <ion-input type="tel" formControlName="fone" [disabled]="!editMode" ></ion-input>
-    </ion-item>
+    <mat-form-field class="campo">
+      <mat-label>Fone</mat-label>
+      <input matInput type="tel" formControlName="fone"   [imask]="{mask: '(00) 0000-00000'}" >
+    </mat-form-field>
 
-    <ion-item lines="full">
-      <ion-label position="stacked">CPF</ion-label>
-      <ion-input type="text" formControlName="cpf"  [disabled]="!editMode"></ion-input>
-    </ion-item>
 
-    <ion-item lines="full">
-      <ion-label position="stacked">Turma</ion-label>
-      <ion-input type="text" formControlName="turmaId" [disabled]="!editMode"></ion-input>
-    </ion-item>
+    <mat-form-field class="campo">
+      <mat-label>Escola</mat-label>
+      <mat-select (selectionChange)="listaTurmas(this.form.controls.escolaId.value)"formControlName="escolaId"  [compareWith]="compareFn" >
+        <mat-option *ngFor="let escola of escolas" [value]="escola.id">
+          {{escola.nome}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
 
-    <ion-item lines="full">
-      <ion-label position="stacked">Escola</ion-label>
-      <ion-input type="text" formControlName="escolaId" [disabled]="!editMode"></ion-input>
-    </ion-item>
+    <mat-form-field class="campo">
+      <mat-label>Turma</mat-label>
+      <mat-select formControlName="turmaId" [compareWith]="compareFn">
+        <mat-option *ngFor="let turma of turmas" [value]="turma.id" >
+          {{ turma.id }} - Turma {{turma.numero}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
 
-    <ion-item lines="full">
-      <ion-label position="stacked">CEP</ion-label>
-      <ion-input type="text" formControlName="cep" [disabled]="!editMode"></ion-input>
-    </ion-item>
+    <mat-form-field class="campo">
+      <mat-label>CEP</mat-label>
+      <input matInput type="text" formControlName="cep"  [imask]="{mask: '00000-000'}">
+    </mat-form-field>
 
-    <ion-item lines="full">
-      <ion-label position="stacked">Logradouro</ion-label>
-      <ion-input type="text" formControlName="logradouro" [disabled]="!editMode"></ion-input>
-    </ion-item>
+    <mat-form-field class="campo">
+      <mat-label>Logradouro</mat-label>
+      <input matInput type="text" formControlName="logradouro" >
+    </mat-form-field>
 
-    <ion-item lines="full">
-      <ion-label position="stacked">Número</ion-label>
-      <ion-input type="text" formControlName="numero" [disabled]="!editMode"></ion-input>
-    </ion-item>
+    <mat-form-field class="campo">
+      <mat-label>Número</mat-label>
+      <input matInput type="number" formControlName="numero" >
+    </mat-form-field>
 
-    <ion-item lines="full">
-      <ion-label position="stacked">Complemento</ion-label>
-      <ion-input type="text" formControlName="complemento" [disabled]="!editMode"></ion-input>
-    </ion-item>
+    <mat-form-field class="campo">
+      <mat-label>Complemento</mat-label>
+      <input matInput type="text" formControlName="complemento" >
+    </mat-form-field>
 
-    <ion-item lines="full">
-      <ion-label position="stacked">Bairro</ion-label>
-      <ion-input type="text" formControlName="bairro" [disabled]="!editMode"></ion-input>
-    </ion-item>
+    <mat-form-field class="campo">
+      <mat-label>Bairro</mat-label>
+      <input matInput type="text" formControlName="bairro" >
+    </mat-form-field>
 
-    <ion-item lines="full">
-      <ion-label position="stacked">Cidade</ion-label>
-      <ion-input type="text" formControlName="cidade" [disabled]="!editMode"></ion-input>
-    </ion-item>
+    <mat-form-field class="campo">
+      <mat-label>Cidade</mat-label>
+      <input matInput type="text" formControlName="cidade" >
+    </mat-form-field>
 
-    <ion-item lines="full">
-      <ion-label position="stacked">Estado</ion-label>
-      <ion-input type="text" formControlName="estado" [disabled]="!editMode"></ion-input>
-    </ion-item>
+    <mat-form-field class="campo">
+      <mat-label>Estado</mat-label>
+      <mat-select formControlName="estado" [compareWith]="compareFn">
+        <mat-option *ngFor="let estado of estados" [value]="estado.sigla" >
+          {{estado.nome}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+
   </form>
 
   <div class="error" *ngIf="!aluno">Falha ao exibir aluno.</div>
@@ -81,7 +95,6 @@
 
     <!-- Sair -->
     <ion-button
-      *ngIf="!editMode"
       ion-button
       slot="end"
       shape="round"
@@ -91,32 +104,8 @@
       class="ion-margin"
       (click)="closeModal()">Sair</ion-button>
 
-    <!-- Sair da edição -->
-    <ion-button
-      *ngIf="editMode"
-      ion-button
-      slot="end"
-      shape="round"
-      fill="clear"
-      color="dark"
-      class="ion-margin"
-      [disabled]="disableClose"
-      (click)="setEditMode(false)">Cancelar</ion-button>
-
-    <!-- Editar -->
-    <ion-button
-      *ngIf="!editMode"
-      ion-button
-      slot="end"
-      shape="round"
-      fill="clear"
-      color="primary"
-      class="ion-margin"
-      (click)="setEditMode(true)">Editar</ion-button>
-
     <!-- Salvar -->
     <ion-button
-      *ngIf="editMode"
       ion-button
       slot="end"
       shape="round"
