--- a/frontend/src/global.scss
+++ b/frontend/src/global.scss
@@ -24,3 +24,17 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+
+
+.aluno-modal-page
+{
+
+
+}
+
+.mat-form-field
+{
+
+  width: 100%!important;
+}
