Campo escola ativa formulario

--- a/frontend/src/app/pages/escola/escola.page.html
+++ b/frontend/src/app/pages/escola/escola.page.html
@@ -75,7 +75,7 @@
           <input matInput type="text" formControlName="complemento" >
         </mat-form-field>
 
-
+        <mat-checkbox class="campo" formControlName="ativa">Ativa</mat-checkbox>
 
       </form>
 
